auto publishing updates to notebooks

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e1aabb46",
+   "id": "07fcbd3f",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80829f22",
+   "id": "58efc8c5",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2fc1583",
+   "id": "f30fe3f7",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7d4d04d",
+   "id": "19a280e1",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -48,14 +48,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c9f107b",
+   "id": "64b60ba5",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
     "\n",
+    "- [Optimal Savings I: Value Function Iteration](https://jax.quantecon.org/opt_savings_1.html)\n",
+    "- [Optimal Savings II: Alternative Algorithms](https://jax.quantecon.org/opt_savings_2.html)\n",
     "- [Shortest Paths](https://jax.quantecon.org/short_path.html)\n",
     "- [Optimal Investment](https://jax.quantecon.org/opt_invest.html)\n",
-    "- [Optimal Savings](https://jax.quantecon.org/opt_savings.html)\n",
+    "- [Inventory Management Model](https://jax.quantecon.org/inventory_ssd.html)\n",
     "- [Endogenous Grid Method](https://jax.quantecon.org/ifp_egm.html)\n",
     "- [Default Risk and Income Fluctuations](https://jax.quantecon.org/arellano.html)\n",
     "- [The Aiyagari Model](https://jax.quantecon.org/aiyagari_jax.html)\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11fedb50",
+   "id": "4d35b9cd",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -76,7 +78,7 @@
   }
  ],
  "metadata": {
-  "date": 1709777243.7265785,
+  "date": 1710383115.6297014,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
