--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b719beda",
+   "id": "be0f472b",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af30658c",
+   "id": "010d6573",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07c5939c",
+   "id": "c127130e",
    "metadata": {
     "hide-output": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f3583d7",
+   "id": "b3f34a0b",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3084ddc",
+   "id": "23f537dd",
    "metadata": {
     "hide-output": false
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8b99d4f",
+   "id": "8d85159f",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aed83da",
+   "id": "53b2b803",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a32422c",
+   "id": "26584e37",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3908acd",
+   "id": "c9b25dd0",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bc09b9d",
+   "id": "714acef1",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfe41726",
+   "id": "a4215a83",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92282d10",
+   "id": "24d15406",
    "metadata": {
     "hide-output": false
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f99526b",
+   "id": "c6f5378d",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5a900b0",
+   "id": "7c60189f",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65d0ff01",
+   "id": "d4469426",
    "metadata": {},
    "source": [
     "Running the above function again so we can see the speed with and without compile time."
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d9e9766",
+   "id": "93ea969e",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c166c575",
+   "id": "276c3782",
    "metadata": {},
    "source": [
     "Notice that we do not JIT-compile the `for` loops, since\n",
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9675c306",
+   "id": "a333c43c",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cc19e8f",
+   "id": "6eddb23a",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73881ac",
+   "id": "d471bb46",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97512db7",
+   "id": "c952589a",
    "metadata": {
     "hide-output": false
    },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec49b52",
+   "id": "b1de1df7",
    "metadata": {},
    "source": [
     "In this case, `M` is small enough for the code to run and\n",
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e44876e",
+   "id": "bb7a4f24",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85c30bcf",
+   "id": "9aea935f",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79205f6a",
+   "id": "a5578364",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae78aac",
+   "id": "0d76eade",
    "metadata": {},
    "source": [
     "Let’s rerun the `for` loop version on smaller `M` to compare the speed"
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "002fe0e3",
+   "id": "53792aff",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70ef567b",
+   "id": "6654d63f",
    "metadata": {},
    "source": [
     "We see that the `lax.fori_loop` version is faster than the `for` loop version\n",
@@ -523,7 +523,7 @@
   }
  ],
  "metadata": {
-  "date": 1709777243.860944,
+  "date": 1710383115.9120016,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
