--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4aaa3b19",
+   "id": "c8132eba",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2d8eca6",
+   "id": "8de3373d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa1d1a2",
+   "id": "91d53c05",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c403dc05",
+   "id": "9a6787db",
    "metadata": {
     "hide-output": false
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e79ee8a",
+   "id": "15e55cb3",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4a14eea",
+   "id": "0fc71418",
    "metadata": {
     "hide-output": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f4f8059",
+   "id": "1f27dbfc",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15e2ebef",
+   "id": "d32d69f6",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10609504",
+   "id": "f67271d3",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e4b4300",
+   "id": "558cef04",
    "metadata": {
     "hide-output": false
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "887d558c",
+   "id": "e1edeb2d",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bf32b51",
+   "id": "865cff02",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51751d8d",
+   "id": "97bfff78",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e036e9b",
+   "id": "862b5d3b",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91505b66",
+   "id": "f16cd82e",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f81831cc",
+   "id": "e832f421",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4614460e",
+   "id": "5527f298",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b32e47e",
+   "id": "7e48381d",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29278ab1",
+   "id": "85b8f67d",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1cd5a0d",
+   "id": "4b29ad2b",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b87f5aa7",
+   "id": "2f35682f",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(4.15)](#equation-eq-ntecxdk).\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0abe7bef",
+   "id": "784c0de3",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f787a3",
+   "id": "638dfa0e",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e29e233",
+   "id": "54cb6ab1",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d5c9e43",
+   "id": "dbde2cfc",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7be6f12",
+   "id": "031f2384",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd87ac32",
+   "id": "796f4e24",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7bdc7f5",
+   "id": "fef014d1",
    "metadata": {
     "hide-output": false
    },
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94e2c9c4",
+   "id": "566b0922",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6afb3b71",
+   "id": "683b2d7e",
    "metadata": {
     "hide-output": false
    },
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1540aa3e",
+   "id": "7a8e9067",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8982b841",
+   "id": "4e62e9da",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9074a120",
+   "id": "9c7ca279",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed59f2aa",
+   "id": "93771975",
    "metadata": {
     "hide-output": false
    },
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db7068c",
+   "id": "4f7edfaa",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81657fe9",
+   "id": "1e0c884a",
    "metadata": {
     "hide-output": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa429828",
+   "id": "40e9395b",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfb78a59",
+   "id": "ab1ce1d4",
    "metadata": {
     "hide-output": false
    },
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a04550a5",
+   "id": "4923e0ac",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b1048b6",
+   "id": "cba7b6e1",
    "metadata": {
     "hide-output": false
    },
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c782f261",
+   "id": "55fa5634",
    "metadata": {
     "hide-output": false
    },
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc3b7dd9",
+   "id": "53f653bf",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02f38acc",
+   "id": "25f4d9c4",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd97b7f7",
+   "id": "2553b7be",
    "metadata": {
     "hide-output": false
    },
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15a722a2",
+   "id": "55bd07f6",
    "metadata": {
     "hide-output": false
    },
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bba54ad",
+   "id": "894b717c",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c1f0552",
+   "id": "8feddaab",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "818d28fe",
+   "id": "ae5f9e94",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a9026be",
+   "id": "0273d130",
    "metadata": {
     "hide-output": false
    },
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca7ea5ad",
+   "id": "22f86102",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9fbc462",
+   "id": "d67163a1",
    "metadata": {
     "hide-output": false
    },
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ae6dd67",
+   "id": "22424280",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7df98b47",
+   "id": "0e4866f4",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba15510",
+   "id": "feaf11df",
    "metadata": {
     "hide-output": false
    },
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e7b3b01",
+   "id": "de283241",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bd67751",
+   "id": "1abf0d7a",
    "metadata": {
     "hide-output": false
    },
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85d2bdf9",
+   "id": "0edbc3da",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8741c66",
+   "id": "db8ad685",
    "metadata": {
     "hide-output": false
    },
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63c916c6",
+   "id": "f5ec7cd4",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1357,7 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b909a02",
+   "id": "166af947",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a78daab",
+   "id": "0e147dc2",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a647d410",
+   "id": "1653219a",
    "metadata": {
     "hide-output": false
    },
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6efc6fb",
+   "id": "7781e97f",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1407,7 +1407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4addc248",
+   "id": "aa08fccf",
    "metadata": {
     "hide-output": false
    },
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "983c8566",
+   "id": "42ccfd65",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1445,7 +1445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc61cf13",
+   "id": "02397c6e",
    "metadata": {
     "hide-output": false
    },
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c7d2a31",
+   "id": "cdd6c90d",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1476,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "997610d0",
+   "id": "d21abdaa",
    "metadata": {
     "hide-output": false
    },
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6339959d",
+   "id": "b34c980d",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1497,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95a3f9d3",
+   "id": "4dd41a98",
    "metadata": {
     "hide-output": false
    },
@@ -1510,7 +1510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916749bf",
+   "id": "2d7bbc51",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1519,7 +1519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fa04ff2",
+   "id": "cd27756f",
    "metadata": {
     "hide-output": false
    },
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "671aacbc",
+   "id": "91ada035",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c435574",
+   "id": "1e83257d",
    "metadata": {
     "hide-output": false
    },
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5650fced",
+   "id": "610e1113",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1561,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fc8c7c6",
+   "id": "ffe42836",
    "metadata": {
     "hide-output": false
    },
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97d863f8",
+   "id": "670402f8",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1583,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "188bbcef",
+   "id": "b1c421e6",
    "metadata": {
     "hide-output": false
    },
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ebb105e",
+   "id": "5e9cf5ae",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1612,7 +1612,7 @@
   }
  ],
  "metadata": {
-  "date": 1709777243.9320827,
+  "date": 1710383115.983611,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
