--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f7505103",
+   "id": "2c921c2f",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1abbc3f4",
+   "id": "8209ced9",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abfdf72d",
+   "id": "368f7f2c",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d84da9a3",
+   "id": "020e33d9",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1717dc7f",
+   "id": "b513307e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99de8de6",
+   "id": "8d26046e",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e93a56",
+   "id": "95752498",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77546965",
+   "id": "aed8920d",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d96fa01",
+   "id": "feb00a55",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78a1310e",
+   "id": "3e9e5ad4",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88bf94a2",
+   "id": "ba0cbaec",
    "metadata": {},
    "source": [
     "Here we go"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83be6cb3",
+   "id": "093bf09e",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92317907",
+   "id": "22b18b3a",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de228e67",
+   "id": "ff6729db",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d5e752",
+   "id": "9212fff6",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f088db63",
+   "id": "a6a9e127",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bbbb752",
+   "id": "ba588146",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "941b7cff",
+   "id": "f01b4bc0",
    "metadata": {
     "hide-output": false
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6a114c",
+   "id": "4605497d",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3acd81a1",
+   "id": "047fb386",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "310b7b4f",
+   "id": "38d0b544",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f1efa4d",
+   "id": "0a598ecc",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "096340a7",
+   "id": "f9ab4bce",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8168d266",
+   "id": "57b6d9f2",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ab86042",
+   "id": "a709f539",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e58ddf2",
+   "id": "55281abc",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65461010",
+   "id": "2589ae9c",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3779991d",
+   "id": "76138f94",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ac3e01d",
+   "id": "083ee6dd",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc08054",
+   "id": "3f899d66",
    "metadata": {
     "hide-output": false
    },
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c0dea77",
+   "id": "eaa61aca",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a173bdc",
+   "id": "89d3c271",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b011b2ee",
+   "id": "6e31894a",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc8d61f4",
+   "id": "8fa9c6e1",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffb60d48",
+   "id": "c0962ea6",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c283b6ec",
+   "id": "85a448eb",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa42412",
+   "id": "0a57e63d",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbab19a7",
+   "id": "392429c4",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca941a22",
+   "id": "134f8baf",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "555edadd",
+   "id": "0b961c6d",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fdb14da",
+   "id": "214a8f37",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f44c590",
+   "id": "62396b3a",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afb2396b",
+   "id": "3a35e4ff",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad97b9f",
+   "id": "24f38852",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfaefc2e",
+   "id": "923283b5",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a9a2df5",
+   "id": "428f5f34",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "066f7885",
+   "id": "cd6e8e3f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f67ef02",
+   "id": "0c62175e",
    "metadata": {
     "hide-output": false
    },
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e5a1493",
+   "id": "a03a0320",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b65beec",
+   "id": "b3948b67",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "890a62d2",
+   "id": "bd6a6b45",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9064cfcd",
+   "id": "d9b712ce",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "520811b1",
+   "id": "e615308b",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -840,7 +840,7 @@
   }
  ],
  "metadata": {
-  "date": 1709777244.107965,
+  "date": 1710383116.0592358,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
