--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed9ad083",
+   "id": "38e2e983",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bd01f70",
+   "id": "013a22af",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff83ad6c",
+   "id": "223f70bb",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17ff6144",
+   "id": "fd15a697",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df459e4a",
+   "id": "f44ab51b",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69952506",
+   "id": "558c2359",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3a5a469",
+   "id": "aa82b7d1",
    "metadata": {
     "hide-output": false
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11bcfd7e",
+   "id": "8dc59c30",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "588a583c",
+   "id": "1b672670",
    "metadata": {
     "hide-output": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3976ca20",
+   "id": "b51731c7",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1085ac47",
+   "id": "7bcc72f9",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ecd9521",
+   "id": "b2e9809c",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cece6c1",
+   "id": "f0c7e11e",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c98a00",
+   "id": "2179786b",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "918ceb69",
+   "id": "103e1a43",
    "metadata": {
     "hide-output": false
    },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ccc9c5c",
+   "id": "b0c0d97e",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42f0c891",
+   "id": "e8397f70",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e77327ce",
+   "id": "9282d04f",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30e58f59",
+   "id": "eb334003",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e43946c",
+   "id": "c761ebb5",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62f93a58",
+   "id": "fcf974f5",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a9c8d09",
+   "id": "41aedb13",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d17a295b",
+   "id": "e43bb1b2",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4966e91d",
+   "id": "be64d27b",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de9a4f7",
+   "id": "61d29b80",
    "metadata": {
     "hide-output": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4580d52",
+   "id": "1c6fdab0",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -483,22 +483,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab892b8f",
+   "id": "a19ddb5c",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def successive_approx_jax(x_0,                   # Initial condition\n",
-    "                          constants,\n",
-    "                          sizes,\n",
-    "                          arrays,                 \n",
+    "def successive_approx_jax(T,                     # Operator (callable)\n",
+    "                          x_0,                   # Initial condition                \n",
     "                          tolerance=1e-6,        # Error tolerance\n",
     "                          max_iter=10_000):      # Max iteration bound\n",
-    "\n",
     "    def body_fun(k_x_err):\n",
     "        k, x, error = k_x_err\n",
-    "        x_new = T(x, constants, sizes, arrays)\n",
+    "        x_new = T(x)\n",
     "        error = jnp.max(jnp.abs(x_new - x))\n",
     "        return k + 1, x_new, error\n",
     "\n",
@@ -509,12 +506,12 @@
     "    k, x, error = jax.lax.while_loop(cond_fun, body_fun, (1, x_0, tolerance + 1))\n",
     "    return x\n",
     "\n",
-    "successive_approx_jax = jax.jit(successive_approx_jax, static_argnums=(2,))"
+    "successive_approx_jax = jax.jit(successive_approx_jax, static_argnums=(0,))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d6da50d0",
+   "id": "9a820f30",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -523,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ba61012",
+   "id": "fd6e4f83",
    "metadata": {
     "hide-output": false
    },
@@ -534,15 +531,15 @@
     "def value_iteration(model, tol=1e-5):\n",
     "    constants, sizes, arrays = model\n",
     "    vz = jnp.zeros(sizes)\n",
-    "\n",
-    "    v_star = successive_approx_jax(vz, constants, sizes, arrays, tolerance=tol)\n",
+    "    _T = lambda v: T(v, constants, sizes, arrays)\n",
+    "    v_star = successive_approx_jax(_T, vz, tolerance=tol)\n",
     "    return get_greedy(v_star, constants, sizes, arrays)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c543ae1",
+   "id": "0548a80e",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95f8bdfa",
+   "id": "268d8a62",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b60063c",
+   "id": "fdf0cd89",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62169f62",
+   "id": "88a3f0fe",
    "metadata": {
     "hide-output": false
    },
@@ -626,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a90185",
+   "id": "a8b3b80b",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc91b98d",
+   "id": "71992607",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -651,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5179fe21",
+   "id": "7b2f6bfb",
    "metadata": {
     "hide-output": false
    },
@@ -667,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb54fad7",
+   "id": "e0deb422",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c1692f4",
+   "id": "917c9672",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -694,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7d81181",
+   "id": "9c756685",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "399cc79a",
+   "id": "9093dee1",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42f65e6d",
+   "id": "4390a68d",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6323db14",
+   "id": "6d6de12a",
    "metadata": {
     "hide-output": false
    },
@@ -758,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e01d3f75",
+   "id": "93772b45",
    "metadata": {
     "hide-output": false
    },
@@ -778,7 +775,7 @@
   }
  ],
  "metadata": {
-  "date": 1709777244.1384418,
+  "date": 1710383116.0892217,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
