--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "298dcaaa",
+   "id": "9ca67703",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b4b56e",
+   "id": "cc4a9577",
    "metadata": {},
    "source": [
     "# References\n",
@@ -25,7 +25,7 @@
   }
  ],
  "metadata": {
-  "date": 1709777244.269397,
+  "date": 1710383116.2570763,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
